tdf#159847 Fix "Duplicate Sheet" when two files have the same name

Prior to this fix, if two files were opened and had the same file name (but in a different directory), Calc might not create the duplicate sheet in the correct file.

Change-Id: I7cdbdd2f3dae6752a3b78bbdcb74fbecb5b24b68
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163763
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>